Update to match same code conventions as StimulusReflex

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -2,6 +2,9 @@
   "name": "cable_ready",
   "version": "4.0.3",
   "main": "./cable_ready.js",
+  "scripts": {
+    "prettier-check": "yarn run prettier --check ./cable_ready.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com:hopsoft/cable_ready.git"
@@ -10,5 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "morphdom": "^2.5.6"
+  },
+  "devDependencies": {
+    "prettier": "^1.18.2"
   }
 }
