--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,7 +3,7 @@
   "version": "4.0.6",
   "main": "./cable_ready.js",
   "scripts": {
-    "prettier-check": "yarn run prettier-standard --check ./cable_ready.js"
+    "prettier-standard-check": "yarn run prettier-standard --check ./cable_ready.js"
   },
   "repository": {
     "type": "git",
