--- a/.github/workflows/prettier-standard.yml
+++ b/.github/workflows/prettier-standard.yml
@@ -3,7 +3,7 @@ name: Prettier-Standard
 on:
   pull_request:
     branches:
-      - '*'
+      - "*"
   push:
     branches:
       - master
@@ -13,12 +13,12 @@ jobs:
     name: Prettier-Standard Check Action
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Setup Node
-      uses: actions/setup-node@v1
-      with:
-        version: '12.x'
-    - run: yarn
-      working-directory: javascript/
-    - run: yarn run prettier-standard-check
-      working-directory: javascript/
+      - uses: actions/checkout@master
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          version: "12.x"
+      - run: yarn
+        working-directory: package/
+      - run: yarn run prettier-standard-check
+        working-directory: package/
