--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
       "package"
     ]
   },
-  "scripts": {
-    "lint": "yarn workspace cable_ready run lint",
-    "build": "yarn workspace cable_ready run build",
-    "build:doc": "yarn workspace cable_ready run build:doc",
-    "watch": "yarn workspace cable_ready run watch",
-    "start": "yarn workspace cable_ready run start",
-    "prerelease": "yarn build",
-    "release:beta": "yarn workspace cable_ready run release:beta",
-    "clean": "yarn workspace cable_ready run clean"
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-typescript": "^2.1.0",
+    "@types/node": "^13.1.5",
+    "@types/uglify-js": "^3.0.4",
+    "rollup": "^1.29.0",
+    "rollup-plugin-sourcemaps": "^0.5.0",
+    "rollup-plugin-uglify": "^6.0.4",
+    "ts-essentials": "^4.0.0",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
+    "typedoc": "^0.15.6",
+    "typescript": "^3.7.4"
   }
 }
