Move package.json to root and prepare for v4.4.0.pre3

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "license": "MIT",
   "author": "Nathan Hopkins <natehop@gmail.com>",
-  "main": "./cable_ready.js",
+  "main": "./javascript/cable_ready.js",
   "scripts": {
-    "prettier-standard-check": "yarn run prettier-standard --check ./cable_ready.js"
+    "prettier-standard-check": "yarn run prettier-standard --check ./javascript/*.js"
   },
   "dependencies": {
     "morphdom": "^2.6.1"
