remove microbundle bump version to 4.4.4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cable_ready-repo",
-  "version": "4.4.0-pre2",
+  "version": "4.4.4",
   "private": true,
   "description": "CableReady helps you create great real-time user experiences by making it simple to trigger client-side DOM changes from server-side Ruby.",
   "homepage": "https://cableready.stimulusreflex.com/",
@@ -8,20 +8,14 @@
   "repository": "https://github.com/hopsoft/cable_ready",
   "license": "MIT",
   "author": "Nathan Hopkins <natehop@gmail.com>",
-  "source": "packages/cable_ready/index.js",
-  "main": "packages/cable_ready/dist/cable_ready.js",
-  "module": "packages/cable_ready/dist/cable_ready.module.js",
-  "esmodule": "packages/cable_ready/dist/cable_ready.modern.js",
+  "main": "./packages/cable_ready/index.js",
+  "module": "./packages/cable_ready/index.js",
   "scripts": {
-    "prepare": "yarn build",
-    "reset": "yarn clean && lerna clean",
-    "clean": "lerna run --parallel clean",
-    "build": "lerna run --stream --prefix build",
+    "prepare": "yarn bootstrap",
+    "reset": "lerna clean",
     "prettier-standard:check": "lerna run --parallel prettier-standard:check",
     "prettier-standard:format": "lerna run --parallel prettier-standard:format",
     "bootstrap": "lerna bootstrap",
-    "dev": "lerna run --parallel dev",
-    "prerelease": "yarn build",
     "release": "lerna publish",
     "release:beta": "lerna publish --npm-tag=beta"
   },
