--- a/packages/@cable_ready/polyfills/package.json
+++ b/packages/@cable_ready/polyfills/package.json
@@ -1,23 +1,17 @@
 {
   "name": "@cable_ready/polyfills",
-  "version": "4.4.0-pre2",
+  "version": "4.4.4",
   "description": "Polyfills to support CableReady in older browsers",
   "homepage": "https://cableready.stimulusreflex.com/",
   "bugs": "https://github.com/hopsoft/cable_ready/issues",
   "repository": "https://github.com/hopsoft/cable_ready",
   "license": "MIT",
   "author": "Nathan Hopkins <natehop@gmail.com>",
-  "source": "index.js",
-  "main": "dist/polyfills.js",
-  "module": "dist/polyfills.module.js",
-  "esmodule": "dist/polyfills.modern.js",
+  "source": "./index.js",
+  "main": "./index.js",
   "scripts": {
-    "prepare": "yarn build",
     "prettier-standard:check": "yarn run prettier-standard --check *.js **/*.js",
-    "prettier-standard:format": "yarn run prettier-standard *.js **/*.js",
-    "build": "microbundle --target browser --format modern,es,cjs --no-strict",
-    "dev": "microbundle watch --target browser --format modern,es,cjs --no-strict",
-    "clean": "rimraf dist"
+    "prettier-standard:format": "yarn run prettier-standard *.js **/*.js"
   },
   "dependencies": {
     "@webcomponents/template": "^1.4.4",
@@ -27,9 +21,7 @@
   "devDependencies": {
     "assert": "^2.0.0",
     "esm": "^3.2.25",
-    "microbundle": "^0.12.4",
-    "prettier-standard": "^16.4.1",
-    "rimraf": "^3.0.2"
+    "prettier-standard": "^16.4.1"
   },
   "publishConfig": {
     "access": "public"
