--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,23 +1,11 @@
-name: Node.js Packages
+name: Publish NPM Package
 
 on:
  release:
    types: [created]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: yarn install
-      - run: yarn build
-      - run: yarn test
-
   publish:
-    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -27,8 +15,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
           scope: '@cable_ready'
       - run: yarn install
-      - run: yarn test
-      - run: yarn build
+      # - run: yarn build
       - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
       - run: yarn release
         env:
