--- a/packages/cable_ready/package.json
+++ b/packages/cable_ready/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cable_ready",
-  "version": "4.4.4",
+  "version": "4.4.6",
   "description": "CableReady helps you create great real-time user experiences by making it simple to trigger client-side DOM changes from server-side Ruby.",
   "keywords": [
     "ruby",
@@ -25,7 +25,7 @@
     "prettier-standard:format": "yarn run prettier-standard *.js **/*.js"
   },
   "dependencies": {
-    "@cable_ready/core": "4.4.4"
+    "@cable_ready/core": "^4.4.6"
   },
   "devDependencies": {
     "prettier-standard": "^16.4.1"
