--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,6 @@
 name: Tests
 
-on:
-  pull_request:
-    branches:
-      - '*'
-  push:
-    branches:
-      - master
+on: [push, pull_request]
 
 jobs:
   javascript_test:
