--- a/.github/workflows/prettier-standard.yml
+++ b/.github/workflows/prettier-standard.yml
@@ -20,5 +20,5 @@ jobs:
         version: '12.x'
     - run: yarn
       working-directory: javascript/
-    - run: yarn run prettier-standard-check
+    - run: yarn lint
       working-directory: javascript/
