--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,20 @@
 *.gemspec
 *.rb
+.codacy.yml
 .gitbook
 .gitbook.yml
 .github
+.github_changelog_generator
+.standard.yml
 .tool-versions
 Gemfile*
 Rakefile
+app
 assets
 bin
 docs
 lib
 pkg
 tags
+test
+tmp
