Introduce Rollup for production builds (#165)
* fix: circular dependency, introduce rollup, cleanup GH actions
* Update package.json
* bundle `nokogiri` for `darwin-19`
* change Ruby version in GitHub action to `'3.0'`
* add `@rollup/plugin-json` to handle `package.json`
* prettier
* update .gitignore
* add `/package` to .gitignore
* refactoring around setting and getting the current consumer
* standard
* also lint `rollup.config.js`
* Improve error message for initialize method
* move `initialize()` function to `elements/index.js`
* implement backoff for getting a ActionCable consumer
* add extra getter to get the consumer synchronous

Co-authored-by: Marco Roth <marco.roth@intergga.ch>

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@
 /spec/reports/
 /tmp/
 node_modules/
-*~
-.byebug_history
-*.log
 /.dir-locals.el
+/dist
+/package
+.byebug_history
+*~
+*.log
+*.tgz
