--- a/.github/workflows/prettier-standard.yml
+++ b/.github/workflows/prettier-standard.yml
@@ -15,9 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Setup Node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
-        version: '12.x'
+        node-version: '12'
+        cache: 'yarn'
     - run: yarn
       working-directory: javascript/
     - run: yarn lint
