--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -1,5 +1,10 @@
 name: dev-builds
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+      - master
+      
+  pull_request:
 
 jobs:
   build:
@@ -44,5 +49,3 @@ jobs:
           
           git tag cable_ready/${GITHUB_SHA:0:7} -m "cable_ready/${GITHUB_SHA:0:7} ${message}"
           git push origin cable_ready/${GITHUB_SHA:0:7}
-        
-        if: ${{ github.event_name == 'push' }}  
