--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "prettier-standard": "^16.4.1",
-    "rollup": "^2.60.0"
+    "rollup": "^2.60.0",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
