--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "license": "MIT",
   "author": "Nathan Hopkins <natehop@gmail.com>",
-  "main": "./dist/cable_ready.umd.js",
-  "module": "./dist/cable_ready.module.js",
+  "main": "./dist/cable_ready.umd.min.js",
+  "module": "./dist/cable_ready.min.js",
   "files": [
     "dist/*",
     "javascript/*"
@@ -45,6 +45,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "prettier-standard": "^16.4.1",
-    "rollup": "^2.70.1"
+    "rollup": "^2.70.1",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
