updaet GitHub tests actions to remove duplicate JS runs

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,27 +8,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [10, 12]
+        node: [12, 16, 16]
+
+    name: Node v${{ matrix.node }}
     steps:
     - uses: actions/checkout@master
+
     - name: Setup Node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node }}
-    - name: Get yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-    - uses: actions/cache@v1
-      id: yarn-cache
-      with:
-        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-${{ matrix.node }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-${{ matrix.node }}-yarn-
+        cache: 'yarn'
+
     - name: Yarn install
       run: yarn
+
     - name: Run JavaScript Tests
-      run: yarn run test
+      run: yarn build
+
+    - name: Run JavaScript Tests
+      run: yarn test
 
   ruby_test:
     name: Ruby Test Action
@@ -36,30 +35,14 @@ jobs:
     strategy:
       matrix:
         ruby-version: [2.6, 2.7, '3.0']
-    steps:
-    - uses: actions/checkout@master
-    - name: Set up Ruby ${{ matrix.ruby-version }}
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby-version }}
-        bundler-cache: true
-    - name: Run ruby tests
-      run: bundle exec rake test
 
-  javascript_build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [ '12', '14', '16' ]
-    name: Node v${{ matrix.node }}
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@master
+      - name: Set up Ruby ${{ matrix.ruby-version }}
+        uses: ruby/setup-ruby@v1
         with:
-          node-version: ${{ matrix.node }}
-          cache: 'yarn'
-      - name: Build JavaScript package
-        run: |
-          yarn install
-          yarn build
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true
+
+      - name: Run ruby tests
+        run: bundle exec rake test
