Add test suite for CableReady operations (#216)
* add some basic unit tests for innerHtml operations

* run javascript tests in GitHub Actions

* run tests on every push and pull_request

* finish up innerHtml tests

* add tests for insertAdjacentHtml and insertAdjacentText

* add tests for remove operation

* add consoleLog operation tests

* remove refute where it's not needed

* Add some tests for `morph` operation

* remove duplicate `stream_from_element.js`

* Migrate test-suite to `@web/dev-runner`

* updaet GitHub tests actions to remove duplicate JS runs

* remove `test:old` script

* fix semantics and phrasing of morph children-only tests

* update GitHub Action triggers

--- a/package.json
+++ b/package.json
@@ -35,17 +35,23 @@
     "prettier-standard:check": "yarn run prettier-standard --check ./javascript/**/*.js rollup.config.js",
     "prettier-standard:format": "yarn run prettier-standard ./javascript/**/*.js rollup.config.js",
     "build": "yarn rollup -c",
-    "watch": "yarn rollup -wc"
+    "watch": "yarn rollup -wc",
+    "test": "web-test-runner javascript/test/**/*.test.js"
   },
   "dependencies": {
     "morphdom": "^2.6.1"
   },
   "devDependencies": {
+    "@open-wc/testing": "^3.1.6",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@web/dev-server-esbuild": "^0.3.2",
+    "@web/dev-server-rollup": "^0.3.19",
+    "@web/test-runner": "^0.14.0",
     "prettier-standard": "^16.4.1",
     "rollup": "^2.70.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "sinon": "^10.0.0"
   }
 }
