--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "watch": "yarn rollup -wc",
     "test": "web-test-runner javascript/test/**/*.test.js"
   },
+  "dependencies": {
+    "morphdom": "^2.6.1"
+  },
   "devDependencies": {
     "@open-wc/testing": "^3.1.6",
     "@rollup/plugin-commonjs": "^21.0.3",
@@ -46,7 +49,6 @@
     "@web/dev-server-esbuild": "^0.3.2",
     "@web/dev-server-rollup": "^0.3.19",
     "@web/test-runner": "^0.14.0",
-    "morphdom": "^2.6.1",
     "prettier-standard": "^16.4.1",
     "rollup": "^2.70.1",
     "rollup-plugin-terser": "^7.0.2",
