--- a/.github/workflows/prettier-standard.yml
+++ b/.github/workflows/prettier-standard.yml
@@ -13,13 +13,16 @@ jobs:
     name: Prettier-Standard Check Action
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Setup Node
-      uses: actions/setup-node@v2
-      with:
-        node-version: '12'
-        cache: 'yarn'
-    - run: yarn
-      working-directory: javascript/
-    - run: yarn lint
-      working-directory: javascript/
+      - uses: actions/checkout@master
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
+
+      - name: Yarn install
+        run: yarn install --frozen-lockfile
+
+      - name: Lint
+        run: yarn lint
