Lock `morphdom` to `2.6.1`

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test": "web-test-runner javascript/test/**/*.test.js"
   },
   "dependencies": {
-    "morphdom": "^2.6.1"
+    "morphdom": "2.6.1"
   },
   "devDependencies": {
     "@open-wc/testing": "^3.1.6",
