--- a/package.json
+++ b/package.json
@@ -56,8 +56,6 @@
     "rollup": "^3.15.0",
     "rollup-plugin-terser": "^7.0.2",
     "sinon": "^15.0.1",
-    "vite": "^4.1.1",
-    "vitepress": "^1.0.0-alpha.45",
-    "vitepress-plugin-search": "^1.0.4-alpha.19"
+    "vitepress": "^1.0.0-alpha.45"
   }
 }
