--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
     "@web/dev-server-esbuild": "^0.3.3",
     "@web/dev-server-rollup": "^0.3.21",
     "@web/test-runner": "^0.15.0",
     "prettier-standard": "^16.4.1",
     "rollup": "^3.15.0",
-    "rollup-plugin-terser": "^7.0.2",
     "sinon": "^15.0.1"
   }
 }
