--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "prettier-standard:format": "yarn run prettier-standard ./javascript/**/*.js rollup.config.js",
     "build": "yarn rollup -c",
     "watch": "yarn rollup -wc",
-    "test": "web-test-runner javascript/test/**/*.test.js"
+    "test": "web-test-runner javascript/test/**/*.test.js",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "morphdom": "2.6.1"
@@ -56,6 +59,10 @@
     "@web/test-runner": "^0.15.0",
     "prettier-standard": "^16.4.1",
     "rollup": "^3.15.0",
-    "sinon": "^15.0.1"
+    "rollup-plugin-terser": "^7.0.2",
+    "sinon": "^15.0.1",
+    "vite": "^4.1.1",
+    "vitepress": "^1.0.0-alpha.45",
+    "vitepress-plugin-search": "^1.0.4-alpha.19"
   }
 }
