--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: [2.7, '3.0', 3.1, 3.2]
+        ruby-version: ['3.0', 3.1, 3.2, 3.3]
 
     steps:
       - uses: actions/checkout@v3
